--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,38 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>TheTeam</title> 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      
+	<link rel="stylesheet" href="main.css">		
+</head>
 <body>
-    <h1>Hellow!!!</h1>
-<script type="text/javascript" src="out/main.js"></script>
+	<section id="app" class="lightGrey">
+				<div class="row">
+		<div class="col s12 m7">
+				<h2 class="header">Horizontal Card</h2>
+				<div class="card horizontal">
+				  <div class="card-image">
+					<img src="https://lorempixel.com/100/190/nature/6">
+				  </div>
+				  <div class="card-stacked">
+					<div class="card-content">
+					  <p>I am a very simple card. I am good at containing small bits of information.</p>
+					</div>
+					<div class="card-action">
+							<button bind="click: main.login">click me</button>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			</div>
+	</section>
+    <script type="text/javascript" src="out/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>  
+	<script src="main.js" type="text/javascript"></script>
+	<script>$(function() {cljsbinding.boot()})</script>
 </body>
 </html>
