--- a/client/index.html
+++ b/client/index.html
@@ -1,38 +1,219 @@
 <!doctype html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>TheTeam</title> 
+	<title>TheTeam</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      
-	<link rel="stylesheet" href="main.css">		
+
+	<link rel="stylesheet" href="main.css">
 </head>
+
 <body>
 	<section id="app" class="lightGrey">
-				<div class="row">
-		<div class="col s12 m7">
-				<h2 class="header">Horizontal Card</h2>
-				<div class="card horizontal">
-				  <div class="card-image">
-					<img src="https://lorempixel.com/100/190/nature/6">
-				  </div>
-				  <div class="card-stacked">
-					<div class="card-content">
-					  <p>I am a very simple card. I am good at containing small bits of information.</p>
-					</div>
-					<div class="card-action">
-							<button bind="click: main.login">click me</button>
-					</div>
-				  </div>
-				</div>
-			  </div>
+		<div class="row">
+			<div class="col s12">
+				<h2 class="header center-align">TheTeam.</h2>
 			</div>
+		</div>
+		<div class="row">
+			<div class="col s3">
+				<div class="card horizontal">
+					<div class="card-stacked">
+						<div class="card-content">
+							<div class="row">
+								<div class="row">
+									<div class="input-field center-align col s12">
+										<h5>Add a new claim</h5>
+									</div>
+								</div>
+								<form class="col s12">
+									<div class="row">
+										<div class="input-field col s12">
+											<i class="material-icons prefix">lock</i>
+											<input disabled value="TGAPS0932D" id="icon_ref" type="text">
+											<label for="icon_ref">Ref</label>
+										</div>
+									</div>
+									<div class="row">
+										<div class="input-field col s12">
+											<i class="material-icons prefix">date_range</i>
+											<input class="datepicker" id="icon_date" type="text">
+											<label for="icon_date">Date</label>
+										</div>
+									</div>
+									<div class="row">
+										<div class="input-field col s6">
+											<i class="material-icons prefix">person</i>
+											<input class="validate" id="icon_firstName" type="text">
+											<label for="icon_firstName">First Name</label>
+										</div>
+										<div class="input-field col s6">
+											<i class="material-icons prefix">person_pin</i>
+											<input class="validate" id="icon_lastName" type="tel">
+											<label for="icon_lastName">Last Name</label>
+										</div>
+									</div>
+									<div class="row">
+										<div class="input-field col s6">
+											<i class="material-icons prefix">navigation</i>
+											<input class="validate" id="icon_prefix" type="text">
+											<label for="icon_prefix">Start Location</label>
+										</div>
+										<div class="input-field col s6">
+											<i class="material-icons prefix">location_on</i>
+											<input class="validate" id="icon_telephone" type="tel">
+											<label for="icon_telephone">End Location</label>
+										</div>
+									</div>
+								</form>
+							</div>
+						</div>
+						<div class="card-action row">
+							<a class="waves-effect waves-light btn col s6 offset-s3 center" bind="click: main.login">Add to my claims</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row col s9">
+				<div class="col s4 row">
+					<div class="col s12">
+						<div class="center-aligns">
+							<span class="black-text">
+								In Progress
+							</span>
+						</div>
+						<ul class="collapsible">
+							<li class="active">
+								<div class="collapsible-header">
+									<i class="material-icons">refresh</i>
+									TGAPS0932D
+									<span class="badge retroGreen">R510.00</span>
+								</div>
+								<div class="collapsible-body">
+									<p>From Brixton to Telesure</p>
+								</div>
+							</li>
+							<li>
+								<div class="collapsible-header">
+									<i class="material-icons">refresh</i>
+									TGAPAA932D
+									<span class="badge retroGreen">R520.00</span>
+								</div>
+								<div class="collapsible-body">
+									<p>From Brixton to Telesure</p>
+								</div>
+							</li>
+							<li>
+								<div class="collapsible-header">
+									<i class="material-icons">refresh</i>
+									TGAPAA932D
+									<span class="badge retroGreen">R520.00</span>
+								</div>
+								<div class="collapsible-body">
+									<p>From Brixton to Telesure</p>
+								</div>
+							</li>
+						</ul>
+					</div>
+					<div class="col s12">
+						<div class="center-aligns">
+							<span class="black-text">
+								Processed
+							</span>
+						</div>
+						<ul class="collapsible">
+							<li class="active">
+								<div class="collapsible-header">
+									<i class="material-icons">done</i>
+									TGAPS0932D
+									<span class="badge retroGreen">R510.00</span>
+								</div>
+								<div class="collapsible-body">
+									<p>From Brixton to Telesure</p>
+								</div>
+							</li>
+							<li>
+								<div class="collapsible-header">
+									<i class="material-icons">done</i>
+									TGAPAA932D
+									<span class="badge retroGreen">R520.00</span>
+								</div>
+								<div class="collapsible-body">
+									<p>From Brixton to Telesure</p>
+								</div>
+							</li>
+							<li>
+								<div class="collapsible-header">
+									<i class="material-icons">error</i>
+									TGAPAA932D
+									<span class="badge retroGreen">R520.00</span>
+								</div>
+								<div class="collapsible-body">
+									<p>From Brixton to Telesure</p>
+								</div>
+							</li>
+							<li>
+								<div class="collapsible-header">
+									<i class="material-icons">done</i>
+									TGAPAA932D
+									<span class="badge retroGreen">R520.00</span>
+								</div>
+								<div class="collapsible-body">
+									<p>From Brixton to Telesure</p>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="card horizontal col s6">
+					<div class="card-stacked">
+						<div class="card-title">
+							<div class="row">
+								<div class="input-field center-align col s12">
+									<h5>TGAPS0932D</h5>
+								</div>
+							</div>
+						</div>
+						<div class="card-content">
+							<div class="row">
+								<div class="input-field col s6">
+									<i class="material-icons prefix">navigation</i>
+									<input id="icon_ref2" type="text" disabled value="Brixton, fulham 86">
+									<label for="icon_ref2">Start Location</label>
+								</div>
+								<div class="input-field col s6">
+									<i class="material-icons prefix">location_on</i>
+									<input id="icon_prefix22" type="text" disabled value="Telesure , Ln 1">
+									<label for="icon_prefix22">Start Location</label>
+								</div>
+								<div class="input-field col s6">
+									<i class="material-icons prefix">date_range</i>
+									<input disabled class="datepicker" id="icon_date" type="text" value="03/05/2018">
+									<label for="icon_date">Date</label>
+								</div>
+								<div class="input-field col s6">
+									<i class="material-icons prefix">directions</i>
+									<input class="datepicker" id="icon_date" type="32">
+									<label for="icon_date">Distance (KM)</label>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
-    <script type="text/javascript" src="out/main.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>  
-	<script src="main.js" type="text/javascript"></script>
-	<script>$(function() {cljsbinding.boot()})</script>
+	<script type="text/javascript " src="out/main.js "></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js "></script>
+	<script src="main.js " type="text/javascript "></script>
+	<script>
+		$(function () {
+			cljsbinding.boot()
+		})
+	</script>
 </body>
+
 </html>
