Fixed the distance field

--- a/client/index.html
+++ b/client/index.html
@@ -196,8 +196,8 @@
 								</div>
 								<div class="input-field col s6">
 									<i class="material-icons prefix">directions</i>
-									<input class="datepicker" id="icon_date" type="32">
-									<label for="icon_date">Distance (KM)</label>
+									<input disabled id="icon_date22" type="text" value="32">
+									<label for="icon_date22">Distance (KM)</label>
 								</div>
 							</div>
 						</div>
