--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,10 @@
 		<div class="row">
 			<div class="col s12">
 				<h2 class="header center-align">TheTeam.</h2>
+
+				<h6 class="header center-align">Logged in as :
+					<a style="cursor:pointer">Joseph Sirwali</a>
+				</h6>
 			</div>
 		</div>
 		<div class="row">
