Added highlight for clicked events

--- a/client/index.html
+++ b/client/index.html
@@ -103,7 +103,7 @@
 							<li>
 								<div class="collapsible-header">
 									<i class="material-icons">refresh</i>
-									TGAPAA932D
+									TGAPQA932D
 									<span class="badge retroGreen">R520.00</span>
 								</div>
 								<div class="collapsible-body">
@@ -113,7 +113,7 @@
 							<li>
 								<div class="collapsible-header">
 									<i class="material-icons">refresh</i>
-									TGAPAA932D
+									TGAPBA932D
 									<span class="badge retroGreen">R520.00</span>
 								</div>
 								<div class="collapsible-body">
@@ -132,17 +132,17 @@
 							<li class="active">
 								<div class="collapsible-header">
 									<i class="material-icons">done</i>
-									TGAPS0932D
+									TBAPS0932D
 									<span class="badge retroGreen">R510.00</span>
 								</div>
 								<div class="collapsible-body">
 									<p>From Brixton to Telesure</p>
 								</div>
 							</li>
-							<li>
+							<li class="lightGrey">
 								<div class="collapsible-header">
 									<i class="material-icons">done</i>
-									TGAPAA932D
+									TQAPAA932D
 									<span class="badge retroGreen">R520.00</span>
 								</div>
 								<div class="collapsible-body">
@@ -152,7 +152,7 @@
 							<li>
 								<div class="collapsible-header">
 									<i class="material-icons">error</i>
-									TGAPAA932D
+									TYAPAA932D
 									<span class="badge retroGreen">R520.00</span>
 								</div>
 								<div class="collapsible-body">
@@ -162,7 +162,7 @@
 							<li>
 								<div class="collapsible-header">
 									<i class="material-icons">done</i>
-									TGAPAA932D
+									TPAPAA932D
 									<span class="badge retroGreen">R520.00</span>
 								</div>
 								<div class="collapsible-body">
