--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col s3">
+			<div class="col s12 m3">
 				<div class="card horizontal">
 					<div class="card-stacked">
 						<div class="card-content">
@@ -81,8 +81,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="row col s9">
-				<div class="col s4 row">
+			<div class="row col s12 m9">
+				<div class="col s12 m4 row">
 					<div class="col s12">
 						<div class="center-aligns">
 							<span class="black-text">
@@ -172,7 +172,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="card horizontal col s6">
+				<div class="card horizontal col s12 m6">
 					<div class="card-stacked">
 						<div class="card-title">
 							<div class="row">
